--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="A form where users can provide their credit/debit card details." />
+        <meta name="description" content="Form for providing credit/debit card details." />
         <title>Card Info</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,68 +13,97 @@
     <body>
         <main>
             <aside>
-                <div class="card front" style="display: flex; flex-direction: column; justify-content: space-between">
+                <div class="card front">
                     <div class="logo">
                         <span class="section-one"></span>
                         <span class="section-two"></span>
                     </div>
                     <div>
-                        <span class="number">0000 0000 0000 0000</span>
+                        <span id="placeholderNumber" class="number">0000 0000 0000 0000</span>
                         <div class="footer">
-                            <span>Jane Appleseed</span>
-                            <span>00/00</span>
+                            <span id="placeholderName" class="cardholder">Jane Appleseed</span>
+                            <span> <span id="placeholderMonth">00</span>/<span id="placeholderYear">00</span> </span>
                         </div>
                     </div>
                 </div>
-                <div class="card back"></div>
+                <div class="card back">
+                    <span id="placeholderCVC" class="cvc">000</span>
+                </div>
             </aside>
             <section>
-                <div>
-                    <form id="cardForm">
-                        <fieldset>
-                            <div class="form-group">
-                                <label for="cardholderName">Cardholder name</label>
-                                <input
-                                    type="text"
-                                    id="cardholderName"
-                                    placeholder="e.g. Jane Appleseed"
-                                    autofocus
-                                    tabindex="0" />
-                            </div>
-                            <div class="form-group">
-                                <label for="cardNumber">Card number</label>
-                                <input
-                                    type="text"
-                                    id="cardNumber"
-                                    placeholder="e.g. 1234 5678 9123 0000" />
-                            </div>
-                            <div class="two-column-grid large-gap">
+                <div class="first-step content-wrapper">
+                    <div class="content">
+                        <form id="cardForm">
+                            <fieldset>
                                 <div class="form-group">
-                                    <label for="expMonth">Exp. date (mm/yy)</label>
-                                    <div class="two-column-grid small-gap">
-                                        <input
-                                            type="text"
-                                            id="expMonth"
-                                            placeholder="MM"
-                                            data-project-error="#expDateErrorPlaceholder" />
-                                        <input
-                                            type="text"
-                                            id="expYear"
-                                            placeholder="YY"
-                                            aria-label="Exp. year"
-                                            data-project-error="#expDateErrorPlaceholder" />
+                                    <label for="cardholderName">Cardholder name</label>
+                                    <input
+                                        type="text"
+                                        id="cardholderName"
+                                        placeholder="e.g. Jane Appleseed"
+                                        data-mirror="#placeholderName"
+                                        autofocus
+                                        tabindex="0" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="cardNumber">Card number</label>
+                                    <input
+                                        type="text"
+                                        id="cardNumber"
+                                        placeholder="e.g. 1234 5678 9123 0000"
+                                        data-mirror="#placeholderNumber" />
+                                </div>
+                                <div class="two-column-grid large-gap">
+                                    <div class="form-group">
+                                        <label for="expMonth">Exp. date (mm/yy)</label>
+                                        <div class="two-column-grid">
+                                            <input
+                                                type="text"
+                                                id="expMonth"
+                                                placeholder="MM"
+                                                data-project-error="#expDateErrorPlaceholder"
+                                                data-mirror="#placeholderMonth" />
+                                            <input
+                                                type="text"
+                                                id="expYear"
+                                                placeholder="YY"
+                                                aria-label="Exp. year"
+                                                data-project-error="#expDateErrorPlaceholder"
+                                                data-mirror="#placeholderYear" />
+                                        </div>
+                                        <div id="expDateErrorPlaceholder"></div>
                                     </div>
-                                    <div id="expDateErrorPlaceholder"></div>
+                                    <div class="form-group">
+                                        <label for="cvc">CVC</label>
+                                        <input
+                                            type="text"
+                                            id="cvc"
+                                            placeholder="e.g. 123"
+                                            data-mirror="#placeholderCVC" />
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="cvc">CVC</label>
-                                    <input type="text" id="cvc" placeholder="e.g. 123" />
-                                </div>
-                            </div>
-                        </fieldset>
-                        <button type="submit" class="button">Confirm</button>
-                    </form>
+                            </fieldset>
+                            <button type="submit" class="button">
+                                <span class="button-label">Confirm</span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
+                <div class="second-step content-wrapper">
+                    <div class="content">
+                        <div class="checkmark-badge">
+                            <div class="checkmark draw"></div>
+                        </div>
+                        <div class="info">
+                            <p class="title">Thank you!</p>
+                            <p class="message">We've added your card details</p>
+                            <button type="button" id="reset" class="button">
+                                <span class="button-label">Continue</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <span class="loading"></span>
             </section>
         </main>
 
